# textureatlas

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  textureatlas.py
.github/workflows/: main.yml
libtextureatlas/: CMakeLists.txt  Doxyfile
libtextureatlas/include/: textureatlas.h
libtextureatlas/src/: textureatlas.c
libtextureatlas/tools/: CMakeLists.txt  readmap.c
tests/: test_cli.py
textureatlas/: __init__.py  __main__.py  textureatlas.py
